fixed scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,15 @@ body {
     font-family: "General Sans", sans-serif;
 }
 
+.scrollbar-hide {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
 @layer base {
     @font-face {
         font-family: "circular-web";
